[gd_scene load_steps=5 format=1]

[ext_resource path="res://GUI/gears.gd" type="Script" id=1]
[ext_resource path="res://GUI/gear_small.png" type="Texture" id=2]
[ext_resource path="res://GUI/gear_med.png" type="Texture" id=3]
[ext_resource path="res://GUI/gear_big.png" type="Texture" id=4]

[node name="GUI" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Gears" type="Container" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 200.0
script/script = ExtResource( 1 )

[node name="gear_small" type="Sprite" parent="Gears"]

transform/pos = Vector2( 40, 50 )
texture = ExtResource( 2 )

[node name="gear_med" type="Sprite" parent="Gears"]

transform/pos = Vector2( 40, 82 )
transform/rot = 22.5
texture = ExtResource( 3 )

[node name="gear_big" type="Sprite" parent="Gears"]

transform/pos = Vector2( 40, 130 )
texture = ExtResource( 4 )


